--- a/index.css
+++ b/index.css
@@ -1,20 +1,21 @@
 @font-face {
-    font-family: montserrat;
-    src: url(Montserrat/Montserrat-VariableFont_wght.ttf) format('truetype')
+    font-family: theseasons;
+    src: url(Fontspring-DEMO-theseasons-reg.ttf ) format('truetype')
 }
 
 *{
     margin: 0;
     padding: 0;
-    font-family: 'montserrat';
-    font-weight: bold
+
 }
-.index{
-    background-color: #ff7f50;
-    background-image:url(img/index.png);
-    background-repeat: no-repeat;
-    background-size:100% ;
-}
+    body{
+        background-color: white;
+        background-image:url(CALJimg/indeximg.jpg);
+        background-repeat: no-repeat;
+        background-size:100% ;
+    }
+    
+
 a{
     text-decoration: none;
     color: black;
@@ -27,19 +28,7 @@ header,nav{
     display:flex;
     justify-content: space-around;
     font-weight: bold;
-
-}
-.sabores{
-    background-color: #FFD1A3;
-}
-.notas{
-    background-color: #FA8072;
-}
-
-
-.sabores>nav{
-    background-color: none;
 }
 .PS{
-    background-image: url(img/trab.png);
+    background-image: url();
 }
